--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
-    "@vitejs/plugin-react": "4.1.0",
+    "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "10.4.16",
     "postcss": "8.4.31",
     "prettier": "3.0.3",
