--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "material-tailwind-dashboard-react": "file:",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.1",
